# cpp-sas7bdat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  OpenCppCoverage.cfg  README.md  conan_package.bash  conan_profile.bash  conan_setup.bash  conanfile.py  sas7bdat.py  setup-conan-github.bash  setup.py
.github/actions/compile/: action.yml
.github/workflows/: build_cmake.yml  build_cmake_macos.yml  build_cmake_ubuntu.yml  build_cmake_windows.yml  codeql-analysis.yml
R/: .gitignore  Makefile  build.bash  devtools-out.txt  test.R
R/CPPSAS7BDAT/: CMakeLists.txt  DESCRIPTION  DESCRIPTION.in  NAMESPACE
R/CPPSAS7BDAT/R/: read_sas.R  reader.R  sink.R  zzz.R
R/CPPSAS7BDAT/src/: CMakeLists.txt  Makefile  Rcppsas7bdat.cpp  filter.cpp  filter.hpp  get_vars.bash  reader.cpp  reader.hpp  sink.hpp  sink_base.hpp  sink_by_columns.hpp  sink_chunk.hpp  sink_data.hpp  version.cpp  version.hpp  wrap_object.hpp  wrap_properties.hpp
apps/: CMakeLists.txt  cppsas7bdat-ci.cpp
benchmark/: Makefile  benchmark.R  benchmark.bash  cppsas7bdat.py  pypandas.py  pysas7bdat.py
cmake/: Conan.cmake  GitInfo.cmake
include/cppsas7bdat/: column-filter.hpp  column.hpp  datasink_csv.hpp  datasink_null.hpp  datasink_print.hpp  datasource_ifstream.hpp  properties.hpp  reader.hpp  reader_csv.hpp  reader_print.hpp  sas7bdat.hpp  types.hpp  version.hpp.in
include/cppsas7bdat/filter/: column.hpp
include/cppsas7bdat/sink/: csv.hpp  null.hpp  print.hpp
include/cppsas7bdat/source/: ifstream.hpp
puml/: relationship.puml  summary.puml
python/: CMakeLists.txt  __init__.py  cppsas7bdat.py  main.cpp
python/pycppsas7bdat/: CMakeLists.txt  __init__.py  read_sas.py  sink.py
python/pycppsas7bdat/cpp/: CMakeLists.txt  import_datetime.cpp  import_datetime.hpp  pycppsas7bdat.cpp  reader.cpp  reader.hpp  sink.hpp
src/: CMakeLists.txt  buffer.hpp  column.cpp  data.hpp  datasource_ifstream.cpp  debug.hpp  decompressors.hpp  encodings.cpp  encodings.hpp  exceptions.cpp  exceptions.hpp  formatters.hpp  header.hpp  memory.hpp  metadata.hpp  page.hpp  reader-impl.hpp  reader.cpp  sas7bdat-impl.hpp  sas7bdat.cpp  stream.cpp  stream.hpp  subheaders.hpp  types.cpp  types.hpp  version.cpp
test/: CMakeLists.txt  catch_main.cpp  data.hpp  extract-info.bash  files.json  files.txt  retrieve.bash  test_sink.py  test_version.py  tests_column-filter.cpp  tests_column.cpp  tests_decompressors.cpp  tests_encodings.cpp  tests_exceptions.cpp  tests_formatters.cpp  tests_interface.cpp  tests_internal.cpp  tests_memory.cpp  tests_reader.cpp  tests_types.cpp  tests_version.cpp  testthat.R
test/data_gov/: formats.sas7bcat
test/data_reikoch/: dates_longname.sas7bdat  dates_longname_binary.sas7bdat  dates_longname_char.sas7bdat  tiny.sas7bdat  tiny2.sas7bdat  tinycopy.sas7bdat
test/testthat/: compare.R  sink.R  sink_chunk.R  sink_data.R  test_column_filter.R  test_read_sas.R  test_sink.R  test_skip.R  test_version.R
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: .gitignore  test_sink.py  tests_column-filter.cpp  tests_decompressors.cpp  tests_encodings.cpp  tests_exceptions.cpp  tests_formatters.cpp  tests_internal.cpp  tests_types.cpp  tests_version.cpp  testthat.R
tests/data/: invalid_magic_number.err
tests/data_poe/: nls.sas7bdat
tests/data_reikoch/: dates_binary.sas7bdat  dates_char.sas7bdat  tiny0.sas7bdat  xpttest.sas7bdat
tests/testthat/: compare.R  test_column_filter.R  test_read_sas.R
